ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-folder
          persistentVolumeClaim:
            claimName: pv-claim
      containers:
        - name: ping-pong
          image: jpvalencia/ping-pong:870f5b2f4e59
          volumeMounts:
          - name: shared-folder
            mountPath: /usr/src/app/files
