ping-pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ping-pong-ingress
  namespace: exercises
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
      - path: /ping
        pathType: Exact
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 3456
